# hisabkitab-backend

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  System-Architecture-Hisabkitab.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: index.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  categories.py  family.py  health.py  vouchers.py
app/core/: categories.py  config.py  logging.py  ratelimit.py  security.py  storage.py
app/db/: mongodb.py
app/schemas/: family.py  ocr.py  voucher.py
app/services/: email.py  families.py  ocr.py  users.py  vouchers.py
postman/: HisabKitab.postman_collection.json
tests/: conftest.py  test_auth.py  test_categories.py  test_family.py  test_image_url.py  test_logging.py  test_ocr.py  test_security_hardening.py  test_users.py  test_vouchers.py
