[project]
name = "hisabkitab-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "pymongo>=4.17.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
    "pytest>=9.0.3",
]
